# DAM

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dam.example.toml  package.json
crates/dam/: Cargo.toml
crates/dam-api/src/: lib.rs  lib_tests.rs
crates/dam-config/: Cargo.toml
crates/dam-config/src/: lib.rs  lib_tests.rs
crates/dam-consent/: Cargo.toml
crates/dam-consent/src/: direct_access.rs  direct_access_tests.rs  lib.rs  lib_tests.rs
crates/dam-core/src/: lib.rs  lib_tests.rs  (+2 more)
crates/dam-daemon/: Cargo.toml
crates/dam-detect-bench/: Cargo.toml
crates/dam-detect-bench/src/: cases.rs  cli.rs  cli_tests.rs  evaluator.rs  evaluator_tests.rs  main.rs  main_tests.rs  metrics.rs  report.rs  report_tests.rs
crates/dam-diagnostics/: Cargo.toml
crates/dam-diagnostics/src/: lib.rs  lib_tests.rs
crates/dam-http-adapter/: Cargo.toml
crates/dam-integrations/: build.rs
crates/dam-mcp/: Cargo.toml
crates/dam-mcp/src/: direct_access.rs  main.rs  main_tests.rs
crates/dam-net/: Cargo.toml
crates/dam-provider-anthropic/: Cargo.toml
crates/dam-provider-anthropic/src/: lib.rs
crates/dam-provider-common/: Cargo.toml
crates/dam-provider-openai/: Cargo.toml
crates/dam-proxy/: Cargo.toml
crates/dam-tray/: Cargo.toml  build.rs
crates/dam-trust/: Cargo.toml
crates/dam-web/: Cargo.toml
crates/damctl/: Cargo.toml
docs/: README.md  build-release.md  dam-api.md  dam-config.md  dam-consent.md  dam-core.md  dam-daemon.md  dam-detect.md  dam-diagnostics.md  dam-e2e.md  dam-filter.md  dam-http-adapter.md  dam-integrations.md  dam-intercept.md  dam-log.md  dam-mcp.md  dam-net-macos.md  dam-net.md  dam-pipeline.md  dam-policy.md  dam-provider-anthropic.md  dam-provider-common.md  dam-provider-openai.md  dam-proxy.md  dam-router.md  dam-tray.md  dam-trust.md  dam-vault.md  dam-web.md  dam.md  damctl.md  parking-lot.md  security-review-bundle.md
native/macos/: Package.swift  README.md
npm/native/: README.md
npm/tests/: smoke.js
scripts/: dam-build.sh  dam_fake_openai_upstream.py  dam_vps_dogfood_verify.py  rpblc_dam_local_llm_e2e_smoke.py  rpblc_dam_visible_evidence_smoke.py
tests/: test_dam_build_script.py  test_dam_fake_openai_upstream.py  test_local_llm_e2e_smoke_script.py  test_vps_dogfood_verify_script.py
(+169 files in other folders)
