[package]
name = "dam-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dam-core.workspace = true
dam-net.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
