[package]
name = "dam-diagnostics"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
dam-api.workspace = true
dam-config.workspace = true
dam-consent.workspace = true
dam-core.workspace = true
dam-daemon.workspace = true
dam-detect.workspace = true
dam-integrations.workspace = true
dam-log.workspace = true
dam-net.workspace = true
dam-net-macos.workspace = true
dam-redact.workspace = true
dam-router.workspace = true
dam-trust.workspace = true
dam-vault.workspace = true
reqwest.workspace = true
serde.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
