[package]
name = "dam-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dam-config.workspace = true
dam-consent.workspace = true
dam-daemon.workspace = true
dam-diagnostics.workspace = true
dam-net.workspace = true
dam-trust.workspace = true
dam-vault.workspace = true
serde.workspace = true
serde_json.workspace = true
