[package]
name = "dam-provider-anthropic"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
dam-provider-common.workspace = true
futures-util.workspace = true
reqwest.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
